0.6.3

 * fix gem dependencies to preserve Ruby v2.0.0 compatibility (@acant)
 * add --host flag for setting the address for the web interface (@acant)

0.6.2 (July 5th 2016)

 * add dependencies on tilt and celluloid-io to ensure correct install (@acant)

0.6.1 (June 11th 2016)

 * fix stop command from hanging the daemon instead of stopping (@acant)

0.6.0 (June 10th 2016)

 * convert notification to use the Notiffany gem (@acant)
 * upgrade rugged gem (@acant)
 * fix missing dependency for the 'gitdocs open' command (@acant)
 * convert to use Celluloid and the listen gem, and remove the old guard and
   event-machine dependencies (@acant)

0.6.0.pre1

 * upgrade gems redcarpet, poltergeist (@acant)
 * add 'rake debug' task for development and debugging (@acant)
 * add a --verbose flag for starting gitdocs with more logging (@acant)
 * change the -D flag to --foreground for running gitdocs in the foreground (acant)

0.5.0 (May 2nd 2015)

 * upgrade gems activerecord, minitest, haml-lint, redcarpet (@acant)
 * convert web interface to use Sinatra instead of renee (@acant)
 * add rake task to run the web interface standalone using the shotgun gem (@acant)
 * add fenced code (and syntax highlighting) into Markdown parsing (@acant)

0.5.0.pre7 (August 3rd 2014)

 * UI improvements to repo browser (@acant)
 * upgrade dependencies (@acant)
 * add integration testing for repo browser (@acant)
 * include hidden files in directory listing (@acant)
 * refactor the server, cleanup file manipulation (@acant)
 * add fetch only syncing for repositories (@acant)
 * add sync status for reach repository in the CLI status (@acant)
 * fix display of hidden files in the web UI (@acant)

0.5.0.pre6 (May 24th 2014)

 * Remove the load_browser_on_startup config option (@acant)
 * Stop the addition of extra conflict markers (@acant)
 * Separate the commit and push methods in repository (@acant)

0.5.0.pre5 (May 14th 2014)

 * Cleanup behavior on empty commits