@@ -18,6 +18,7 @@ require 'gitdocs/share'
 require 'gitdocs/configuration'
 require 'gitdocs/cli'
 require 'gitdocs/manager'
+require 'gitdocs/celluloid_facade'
 require 'gitdocs/synchronizer'
 require 'gitdocs/notifier'
 require 'gitdocs/git_notifier'
