@@ -1,0 +1,11 @@
+# -*- encoding : utf-8 -*-
+
+require File.expand_path('../test_helper', __FILE__)
+
+describe 'Gitdocs::CelluloidFacade' do
+  let(:celluloid_facade) { Gitdocs::CelluloidFacade.new(:host, :port) }
+
+  # TODO: describe '#start' do
+
+  # TODO: describe '#terminate' do
+end
